--- a/Pipper-Front/src/app/tab3/tab3.page.html
+++ b/Pipper-Front/src/app/tab3/tab3.page.html
@@ -27,11 +27,11 @@
     <ion-list>
       <ion-item>
         <ion-label position="floating">Título</ion-label>
-        <ion-input type="title" formControlName="title"></ion-input>
+        <ion-input type="title" formControlName="title" maxLength="50"></ion-input>
       </ion-item>
       <ion-item>
         <ion-label position="floating">Descrição</ion-label>
-        <ion-textarea auto-grow="true" type="originalComment" formControlName="originalComment" type="text" maxLength="442"></ion-textarea>
+        <ion-textarea auto-grow="true" type="originalComment" formControlName="originalComment" type="text" maxLength="240"></ion-textarea>
       </ion-item>
     </ion-list>
     <ion-button class="botao" expand="block" size="Secondary" type="submit" shape="round" [disabled]="postForm.invalid" color ="success">Continuar</ion-button>
