--- a/Pipper-Front/src/global.scss
+++ b/Pipper-Front/src/global.scss
@@ -44,4 +44,7 @@
     left: auto !important;
     top: auto !important;
 }
+.deleteAlert .alert-wrapper {
+    font-family: 'Roboto', sans-serif;
+}
 
