--- a/Pipper-Front/src/app/cadastro/cadastro.page.html
+++ b/Pipper-Front/src/app/cadastro/cadastro.page.html
@@ -17,11 +17,11 @@
   <ion-list>
     <ion-item>
       <ion-label position="floating">Nome</ion-label>
-      <ion-input type="name" formControlName="name"></ion-input>
+      <ion-input type="name" formControlName="name" maxlenght="30"></ion-input>
     </ion-item>
     <ion-item>
       <ion-label position="floating">Nickname</ion-label>
-      <ion-input type="nickname" formControlName="nickname"></ion-input>
+      <ion-input type="nickname" formControlName="nickname" maxlenght="10"></ion-input>
     </ion-item>
     <div class="linha"></div>
       <ion-item>
