--- a/Pipper-Front/src/app/components/comment/comment.component.scss
+++ b/Pipper-Front/src/app/components/comment/comment.component.scss
@@ -1,5 +1,5 @@
 .iconMask {
-    width: 40%;
+    width: 20%;
     display: inline-block;
     height: auto;
     border-radius: 50px;
@@ -15,10 +15,12 @@
 }
 
 .imgAndText {
+    width: 100%;
     display: flex;
 }
 
 .commentText {
+    width: 80%;
     margin-left: 3%;
 }
 
@@ -26,6 +28,10 @@
     font-style: italic;
     font-size: 70%;
     margin-bottom: 2%;
+}
+
+.commentText h5 {
+    text-align: justify;
 }
 
 .commentText h3 {
