--- a/Pipper-Front/src/app/tab1/tab1.page.html
+++ b/Pipper-Front/src/app/tab1/tab1.page.html
@@ -10,11 +10,18 @@
     </div>
 
 <ion-content>
+  <div class="mySpinner">
+    <ion-spinner *ngIf="spinner" name="bubbles"></ion-spinner>
+  </div>
+  <ion-refresher slot="fixed" (ionRefresh)="doRefresh($event)" pullMin="10" pullMax="100">
+    <ion-refresher-content>
+    </ion-refresher-content>
+  </ion-refresher>
   <div *ngIf="showNovo">
     <app-home-post
      *ngFor="let post of posts"
      [post]="post"
-     
+     (click)="redirectPost(post)"
      
      >
     </app-home-post>
