--- a/Pipper-Front/src/app/tab1/tab1.page.scss
+++ b/Pipper-Front/src/app/tab1/tab1.page.scss
@@ -28,8 +28,8 @@ ion-content {
     display: flex;
     margin-top: 2%;
     padding-bottom: 2%;
-    margin-left: 3%;
-    margin-right: 3%;
+    margin-left: 4%;
+    margin-right: 4%;
     justify-content: space-between;
     background-color: #006A71;
 }
@@ -57,4 +57,10 @@ ion-button:hover {
 
 app-home-post {
     outline: none;
+}
+
+.mySpinner {
+    width: 100%;
+    display: flex;
+    justify-content: center;
 }
