--- a/Pipper-Front/src/app/user-popover/user-popover.component.scss
+++ b/Pipper-Front/src/app/user-popover/user-popover.component.scss
@@ -91,7 +91,9 @@ h3 {
 
 h5 {
     color: #FFE9E9;
-    margin-left: 5%;
+    margin-left: 2%;
+    margin-top: 2%;
+    margin-bottom: 2%;
 }
 
 h6 {
@@ -109,5 +111,5 @@ h6 {
 }
 
 .logout {
-    margin-top: 10%;
+    margin-top: 20%;
 }
