+Perfil Integrado/+Rotas/#Pagina de Post

--- a/Pipper-Front/src/app/components/comment/comment.component.html
+++ b/Pipper-Front/src/app/components/comment/comment.component.html
@@ -5,9 +5,9 @@
   </div>
 
   <div class="commentText">
-    <h3>Fulano (@fulano)</h3>
-    <h6>Há 3 minutos atrás</h6>
-    <h5>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</h5>
+    <h3>{{comments.user.name}}</h3>
+    <h6></h6>
+    <h5>{{comments.text}}</h5>
   </div>
 </div>
 <div class="hr"></div>
