--- a/Pipper-Front/src/app/components/home-post/home-post.component.html
+++ b/Pipper-Front/src/app/components/home-post/home-post.component.html
@@ -17,7 +17,7 @@
             <div class="mask">
               <img src="https://pbs.twimg.com/profile_images/1082020318523412480/E87sUSUc_400x400.jpg">
             </div>
-              <h4>{{post.user_id}}</h4>
+              <h4>{{post.user.name}}</h4>
             </div>
           <ion-button size="small" class="button" strong="true" mode="ios">{{followButton.follow}}</ion-button>
         </div>
