--- a/Pipper-Front/src/app/components/profile-post/profile-post.component.html
+++ b/Pipper-Front/src/app/components/profile-post/profile-post.component.html
@@ -8,13 +8,13 @@
         <div class="timeHrTitle">
           <h4>Hoje às 15h10</h4>
           <div class="hr2"></div>
-          <h2>Título Was ist Lorem Ipsum?</h2>
+          <h2>{{post.title}}</h2>
         </div>
       </div>
       <div class="profileButtons">
-        <ion-button size="small" class="button"><ion-icon name="thumbs-up-outline"></ion-icon><h6>10</h6></ion-button>
+        <ion-button size="small" class="button"><ion-icon name="thumbs-up-outline"></ion-icon><h6>{{post.like}}</h6></ion-button>
         <ion-button size="small" class="button"><ion-icon name="chatbubble-outline"></ion-icon><h6>10</h6></ion-button>
-        <ion-button size="small" class="button"><ion-icon name="star" class="star"></ion-icon><h6>4.5</h6></ion-button>
+        <ion-button size="small" class="button"><ion-icon name="star" class="star"></ion-icon><h6>{{post.rating}}</h6></ion-button>
         <ion-button size="small" class="button"><h6>Tags</h6></ion-button>
       </div>
       <!--<div class="hr"></div>-->
