--- a/Pipper-Front/src/app/pages/profile/profile.page.html
+++ b/Pipper-Front/src/app/pages/profile/profile.page.html
@@ -15,8 +15,8 @@
         <div class="profileMask">
           <img src="https://pbs.twimg.com/profile_images/1082020318523412480/E87sUSUc_400x400.jpg">
         </div>
-        <div class="userInfo">
-          <h2>Fulano (@fulano)<ion-icon name="leaf-outline" class="leaf"></ion-icon></h2>
+        <div class="userInfo" *ngIf="user">
+          <h2>{{user.name}}<ion-icon name="leaf-outline" class="leaf"></ion-icon></h2>
           <div class="userNumbers">
             <div class="userPosts">
               <div class="number"><h3>56</h3></div>
@@ -43,12 +43,12 @@
     </ion-card-content>
   </ion-card>
   
-  <div class="sticky" style="z-index:10">
+  <div class="sticky" style="z-index:10" *ngIf="user">
     <ion-card class="posts">
       <ion-card-content>
         <div class="fixedHeader">
           <div class="postHeader">
-            <h2 class="postTitle">Publicações de</h2><h2>@fulano</h2>
+            <h2 class="postTitle">Publicações de</h2><h2>{{user.nickname}}</h2>
           </div>
         </div>
       </ion-card-content>
@@ -56,9 +56,11 @@
   </div>
 
   <div class="notSticky" style="z-index:1">
-    <app-profile-post></app-profile-post>
-    <app-profile-post></app-profile-post>
-    <app-profile-post></app-profile-post>
-    <app-profile-post></app-profile-post>
+    <app-profile-post
+    *ngFor="let post of posts"
+    [post]="post"
+    
+    
+    ></app-profile-post>
   </div>
 </ion-content>
