--- a/Pipper-Front/src/app/tab1/tab1.page.html
+++ b/Pipper-Front/src/app/tab1/tab1.page.html
@@ -12,7 +12,7 @@
 <ion-content>
   <div *ngIf="showNovo">
     <app-home-post
-     *ngFor="let post of posts"
+     *ngFor="let post of posts1"
      [post]="post"
      (click)='redirectPost(post.id)'
      
@@ -22,12 +22,17 @@
   </div>
 
   <div *ngIf="showSeguindo">
-teste seguindo
+    <app-home-post
+    *ngFor="let post of posts3"
+    [post]="post"
+    (click)='redirectPost(post.id)'
+    
+    ></app-home-post>
   </div>
 
   <div *ngIf="showTopo">
     <app-home-post
-     *ngFor="let post of posts"
+     *ngFor="let post of posts2"
      [post]="post"
      (click)='redirectPost(post.id)'
      
