--- a/Pipper-Front/src/app/components/home-post/home-post.component.html
+++ b/Pipper-Front/src/app/components/home-post/home-post.component.html
@@ -7,9 +7,19 @@
           </div>
         </div>
         <div class="tagsPost">
-          <ion-chip>testeDeTag</ion-chip>
+          <ion-slides [options]="optionSlide" class="slides">
+            <ion-slide class="slide">
+              <ion-chip>Slide das tags</ion-chip>
+            </ion-slide>
+            <ion-slide>
+              <ion-chip>Deixar vertical</ion-chip>
+            </ion-slide>
+            <ion-slide>
+              <ion-chip>Testezada</ion-chip>
+            </ion-slide>
+          </ion-slides>
         </div>
-        </div>
+      </div>
 
       <div class="textUserAndButtons"> <!--collumn-->
         <div class="userPhotoAndFollow"> <!--row-->
@@ -30,7 +40,7 @@
         <div class="buttons"> <!--row-->
               
           <ion-button size="small" class="button"><ion-icon name="star" class="star"></ion-icon><h6>{{post.rating}}</h6></ion-button>
-          <ion-button size="small" class="button"><ion-icon name="chatbubble-outline"></ion-icon><h6></h6></ion-button>
+          <ion-button size="small" class="button"><ion-icon name="chatbubble-outline"></ion-icon><h6>6</h6></ion-button>
           <ion-button size="small" class="button"><ion-icon name="thumbs-up-outline"></ion-icon><h6>{{post.like}}</h6></ion-button>
         </div>
       </div>
