--- a/Pipper-Front/src/app/pages/search/search.page.html
+++ b/Pipper-Front/src/app/pages/search/search.page.html
@@ -1,5 +1,5 @@
 <link href="https://fonts.googleapis.com/css2?family=Poiret+One&display=swap" rel="stylesheet">
-<div class=busca>
+<div class="busca">
   <div class="search" *ngIf="searchUser">
     <ion-icon name="search-outline" (click)="search()"></ion-icon>
     <form><ion-input></ion-input></form>
@@ -11,17 +11,19 @@
         Tags
         <ion-icon class="seta" name="chevron-down-outline" ></ion-icon>
       </ion-button>
-      <ion-button class="tag" color="tertiary" *ngIf="servico" (click)="close(1)">serviço</ion-button>
-      <ion-button class="tag" color="tertiary" *ngIf="produto" (click)="close(2)">produto</ion-button>
-      <ion-button class="tag" color="tertiary" *ngIf="fisico" (click)="close(3)">fisico</ion-button>
-      <ion-button class="tag" color="tertiary" *ngIf="online" (click)="close(4)">online</ion-button>
-      <ion-button class="tag" color="tertiary" *ngIf="entretenimento" (click)="close(5)">entretenimento</ion-button>
-      <ion-button class="tag" color="tertiary" *ngIf="saude" (click)="close(6)">saude</ion-button>
-      <ion-button class="tag" color="tertiary" *ngIf="esporte" (click)="close(7)">esporte</ion-button>
-      <ion-button class="tag" color="tertiary" *ngIf="alimentacao" (click)="close(8)">alimentacao</ion-button>
-      <ion-button class="tag" color="tertiary" *ngIf="utilidades_domesticas" (click)="close(9)">utilizades domesticas</ion-button>
-      <ion-button class="tag" color="tertiary" *ngIf="infantis" (click)="close(10)">infantis</ion-button>
     </form>
+  </div>
+  <div class="slideTag">
+    <ion-button class="tag" color="tertiary" *ngIf="servico" (click)="close(1)">serviço <ion-icon name="close-circle-outline" class="close"></ion-icon></ion-button>
+    <ion-button class="tag" color="tertiary" *ngIf="produto" (click)="close(2)">produto <ion-icon name="close-circle-outline" class="close"></ion-icon></ion-button>
+    <ion-button class="tag" color="tertiary" *ngIf="fisico" (click)="close(3)">fisico <ion-icon name="close-circle-outline" class="close"></ion-icon></ion-button>
+    <ion-button class="tag" color="tertiary" *ngIf="online" (click)="close(4)">online <ion-icon name="close-circle-outline" class="close"></ion-icon></ion-button>
+    <ion-button class="tag" color="tertiary" *ngIf="entretenimento" (click)="close(5)">entretenimento <ion-icon name="close-circle-outline" class="close"></ion-icon></ion-button>
+    <ion-button class="tag" color="tertiary" *ngIf="saude" (click)="close(6)">saude <ion-icon name="close-circle-outline" class="close"></ion-icon></ion-button>
+    <ion-button class="tag" color="tertiary" *ngIf="esporte" (click)="close(7)">esporte <ion-icon name="close-circle-outline" class="close"></ion-icon></ion-button>
+    <ion-button class="tag" color="tertiary" *ngIf="alimentacao" (click)="close(8)">alimentacao <ion-icon name="close-circle-outline" class="close"></ion-icon></ion-button>
+    <ion-button class="tag" color="tertiary" *ngIf="utilidades_domesticas" (click)="close(9)">utilidades domesticas <ion-icon name="close-circle-outline" class="close"></ion-icon></ion-button>
+    <ion-button class="tag" color="tertiary" *ngIf="infantis" (click)="close(10)">infantis <ion-icon name="close-circle-outline" class="close"></ion-icon></ion-button>
   </div>
   <div class="botao">
     <ion-button class="botao" (click)="searchPoste()" color="light">Posts</ion-button>
