--- a/Pipper-Front/src/app/pages/search/search.page.scss
+++ b/Pipper-Front/src/app/pages/search/search.page.scss
@@ -35,7 +35,7 @@ ion-button{
     flex-direction: row;
     border-radius: 100px;
     margin-top: 5%;
-    margin-bottom: 5%;
+    margin-bottom: 2%;
     width: 70%;
 
 }
@@ -43,6 +43,7 @@ ion-button{
     color: #272727;
     --border-radius: 200px;
     font-weight: bold;
+    height: 30px;
 }
 .seta{
     color: #272727;
@@ -52,4 +53,16 @@ ion-button{
     --border-radius: 15px;
     font-family: 'Poiret One', cursive;
     -webkit-text-stroke: 0.3px #EFFFFB;
+}
+
+.slideTag {
+    max-width: 90%;
+    display: flex;
+    overflow: auto;
+    right: 0;
+    border-radius: 50px;
+}
+
+.close {
+    color: #272727;
 }
