--- a/Pipper-Front/src/app/user-popover/user-popover.component.html
+++ b/Pipper-Front/src/app/user-popover/user-popover.component.html
@@ -10,7 +10,10 @@
         <img src="https://pbs.twimg.com/profile_images/1082020318523412480/E87sUSUc_400x400.jpg">
       </div>
       <div class="userInfo">
-        <h2>Fulano (@fulano)<ion-icon name="leaf-outline" class="leaf"></ion-icon></h2>
+        <div class="userNames">
+          <h2>Fulano •</h2>
+          <h2>@fulano</h2><ion-icon name="leaf-outline" class="leaf"></ion-icon>
+        </div>
         <div class="userNumbers">
           <div class="userPosts">
             <div class="number"><h3>56</h3></div>
