--- a/Pipper-Front/src/app/user-popover/user-popover.component.scss
+++ b/Pipper-Front/src/app/user-popover/user-popover.component.scss
@@ -6,6 +6,7 @@
 
 .profileContent {
     display: flex;
+    flex-direction: column;
 }
 
 .profileMask {
@@ -33,10 +34,19 @@
 }
 
 .userInfo {
+    display: flex;
+    flex-direction: column;
     width: 100%;
     margin-left: 2%;
 }
 
+.userNames {
+    display: flex;
+    width: 100%;
+    justify-content: center;
+    margin-top: 2%;
+    margin-bottom: 2%;
+}
 .hr {
     background-color: #C4FB6D;
     height: 0.1px;
@@ -60,11 +70,13 @@ h2 {
     margin-top: 0%;
     margin-bottom: 2%;
     color: #FFE9E9;
+    margin-right: 1%;
 }
 
 .leaf {
     color: #C4FB6D;
-    margin-left: 5%;
+    margin-left: 2%;
+    margin-top: 1%;
 }
 
 .names {
@@ -79,6 +91,11 @@ h2 {
     font-weight: lighter;
     width: 100%;
     -webkit-text-stroke: 0.5px #50D890;
+}
+
+.conteudo {
+    margin-left: 2%;
+    margin-top: 5%;
 }
 
 h3 {
@@ -98,7 +115,7 @@ h5 {
 
 h6 {
     font-size: 80%;
-    margin-top: 5%;
+    margin-top: 2%;
     margin-bottom: 5%;
     color: silver;
     font-family: 'Roboto', sans-serif;
