--- a/Pipper-Front/src/app/components/home-post/home-post.component.html
+++ b/Pipper-Front/src/app/components/home-post/home-post.component.html
@@ -24,7 +24,7 @@
 
         <div class="text"> <!--collumn-->
           <h2>{{post.title}}</h2>
-          <h3>{{post.originalComment}}</h3>
+          <h3>{{post.text}}</h3>
         </div>
 
         <div class="buttons"> <!--row-->
