--- a/Pipper-Front/src/app/pages/profile/profile.page.html
+++ b/Pipper-Front/src/app/pages/profile/profile.page.html
@@ -59,7 +59,7 @@
     <app-profile-post
     *ngFor="let post of posts"
     [post]="post"
-    
+    (click)="redirectPost(post.id)"
     
     ></app-profile-post>
   </div>
