--- a/Pipper-Front/src/app/pages/post/post.page.html
+++ b/Pipper-Front/src/app/pages/post/post.page.html
@@ -34,6 +34,8 @@
           <ion-button size="small" class="buttonTag" strong="true" mode="ios">Tags</ion-button>
         </div>
       </div>
+      <!-- Display das informações do post -->
+      <div *ngIf="editModeOff">
       <div class="postTitle">
         <h2>{{post.title}}</h2>
       </div>
@@ -41,16 +43,40 @@
         <div class="quoteIconLeft">
           <img src="../assets/quote.png">
         </div>
-        <ion-card-subtitle>{{post.originalComment}}</ion-card-subtitle>
+        <ion-card-subtitle>{{post.text}}</ion-card-subtitle>
         <div class="quoteIconRight">
          <img src="../assets/quote2.png">
         </div>
       </div>
-
-      <div class="interactionButtons">
+    </div>
+    <!-- Div para editar as informações do post -->
+    <div *ngIf="editMode" class="inputAndSubmit">
+      <form [formGroup]="postForm" (ngSubmit)="editPost()">
+      <ion-list>
+      <div class="postTitle">
+        <ion-input position="floating" placeholder="Título" class="input" mode="md" type="title" formControlName="title"></ion-input>
+      </div>
+      <div class="leftRightAndText">
+        <div class="quoteIconLeft">
+          <img src="../assets/quote.png">
+        </div>
+        <ion-input position="floating" placeholder="Comentário" class="input" mode="md" type="text" formControlName="text"></ion-input>
+        <div class="quoteIconRight">
+         <img src="../assets/quote2.png">
+        </div>
+      </div>
+      <ion-button class="interactionButton" size="small" mode="md" type="submit"><span style="text-transform:none!important;">Concluído</span></ion-button>
+      </ion-list>
+    </form>
+    </div>
+      
+      <!-- Botões que desaparecem quando enquanto a edição do post nao estiver finalizada -->
+      <div class="interactionButtons" *ngIf= "editModeOff">
         <ion-button class="interactionButton" size="small" mode="md"><ion-icon name="thumbs-up-outline"></ion-icon>{{post.likes}}</ion-button>
         <ion-button class="interactionButton" size="small" mode="md" (click)="listComments()"><ion-icon name="chatbubble-outline"></ion-icon>6</ion-button>
         <ion-button class="interactionButton" size="small" mode="md" (click)="presentCopy()"><ion-icon name="arrow-redo-outline"></ion-icon><span style="text-transform:none!important;">Compartilhe</span></ion-button>
+        <ion-button class="interactionButton" size="small" mode="md" (click)="deletePost()" *ngIf="deleteButton"><ion-icon name="arrow-redo-outline"></ion-icon><span style="text-transform:none!important;">Apagar</span></ion-button>
+        <ion-button class="interactionButton" size="small" mode="md" (click)="edit()"><ion-icon name="arrow-redo-outline"></ion-icon><span style="text-transform:none!important;">Editar</span></ion-button>
       </div>
     </ion-card-content>
   </ion-card>
