--- a/Pipper-Front/src/app/pages/profile/profile.page.html
+++ b/Pipper-Front/src/app/pages/profile/profile.page.html
@@ -19,7 +19,7 @@
           <h2>{{user.name}}<ion-icon name="leaf-outline" class="leaf"></ion-icon></h2>
           <div class="userNumbers">
             <div class="userPosts">
-              <div class="number"><h3>56</h3></div>
+              <div class="number"><h3>{{postCount}}</h3></div>
               <div class="numberText"><h6>Publicações</h6></div>
             </div>
             <div class="userFollowers">
