--- a/Pipper-Front/src/app/components/home-post/home-post.component.html
+++ b/Pipper-Front/src/app/components/home-post/home-post.component.html
@@ -1,36 +1,31 @@
 <ion-card>
   <ion-card-content>
-    <div class="homePost">
-      <div class="imgAndTags"> <!--collumn-->
-        <div class="imgMask">
-          <div class="imgPost"><img src="https://www.skinnytaste.com/wp-content/uploads/2019/09/Baked-Sweet-Potatoes-5-500x500.jpg">
+    <div class="userPhotoAndFollow"> <!--row-->
+      <div class="photoAndUser">
+        <div class="mask">
+          <img src="https://pbs.twimg.com/profile_images/1082020318523412480/E87sUSUc_400x400.jpg">
+        </div>
+        <div class="nameAndTime">
+          <div class="nameAndUser">
+            <h4 class="name">{{post.user.name}}</h4>
+            <div class="userTime">
+            <h4 class="username">@{{post.user.nickname}}</h4>
+            <h6 class="time">• Hoje às 10:30</h6>
+          </div>
           </div>
         </div>
-        <div class="tagsPost">
-          <ion-slides [options]="optionSlide" class="slides">
-            <ion-slide class="slide">
-              <ion-chip>Slide das tags</ion-chip>
-            </ion-slide>
-            <ion-slide>
-              <ion-chip>Deixar vertical</ion-chip>
-            </ion-slide>
-            <ion-slide>
-              <ion-chip>Testezada</ion-chip>
-            </ion-slide>
-          </ion-slides>
+        </div>
+      <div class="follow">
+        <ion-button size="small" class="button" strong="true" mode="ios">{{followButton.follow}}</ion-button>
+      </div>
+    </div>
+    <div class="homePost">
+      <div class="imgAndTags"> <!--collumn-->
+          <div class="imgPost"><img src="https://emporioquatroestrelas.vteximg.com.br/arquivos/ids/159625-1000-1000/folha-de-louro-emp.png?v=637130581619630000">
         </div>
       </div>
 
       <div class="textUserAndButtons"> <!--collumn-->
-        <div class="userPhotoAndFollow"> <!--row-->
-          <div class="photoAndUser">
-            <div class="mask">
-              <img src="https://pbs.twimg.com/profile_images/1082020318523412480/E87sUSUc_400x400.jpg">
-            </div>
-              <h4>{{post.user.name}}</h4>
-            </div>
-          <ion-button size="small" class="button" strong="true" mode="ios">{{followButton.follow}}</ion-button>
-        </div>
 
         <div class="text"> <!--collumn-->
           <h2>{{post.title}}</h2>
@@ -38,13 +33,36 @@
         </div>
 
         <div class="buttons"> <!--row-->
-              
-          <ion-button size="small" class="button"><ion-icon name="star" class="star"></ion-icon><h6>{{post.rating}}</h6></ion-button>
-          <ion-button size="small" class="button"><ion-icon name="chatbubble-outline"></ion-icon><h6>6</h6></ion-button>
-          <ion-button size="small" class="button"><ion-icon name="thumbs-up-outline"></ion-icon><h6>{{post.like}}</h6></ion-button>
+          <ion-button size="small" class="button"><ion-icon name="thumbs-up-outline" ></ion-icon><!--<h6>{{post.like}}</h6>--></ion-button>
+          <ion-button size="small" class="button"><ion-icon name="chatbubble-outline"></ion-icon><!--<h6>6</h6>--></ion-button>
+          <ion-button size="small" class="button"><ion-icon name="star-outline" class="star"></ion-icon><!--<h6>{{post.rating}}</h6>--></ion-button>
         </div>
       </div>
     </div>
+
+    <div class="tagsPost">
+      <ion-button mode="md" class="tags"><!--ngForaqui-->
+        <span style="text-transform:none!important;">
+          Entretenimento
+        </span>
+      </ion-button>
+      <ion-button mode="md" class="tags"><!--ngForaqui-->
+        <span style="text-transform:none!important;">
+          Serviço
+        </span>
+      </ion-button>
+      <ion-button mode="md" class="tags"><!--ngForaqui-->
+        <span style="text-transform:none!important;">
+          Saúde
+        </span>
+      </ion-button>
+      <ion-button mode="md" class="tags"><!--ngForaqui-->
+        <span style="text-transform:none!important;">
+          Infantil
+        </span>
+      </ion-button>
+    </div>
+
   </ion-card-content>
 </ion-card>
 
