--- a/Pipper-Front/src/app/components/profile-post/profile-post.component.html
+++ b/Pipper-Front/src/app/components/profile-post/profile-post.component.html
@@ -3,7 +3,7 @@
     <div class="profilePost">
       <div class="profileContent">
         <div class="profileImg">
-          <img src="https://www.skinnytaste.com/wp-content/uploads/2019/09/Baked-Sweet-Potatoes-5-500x500.jpg">
+          <img src="https://emporioquatroestrelas.vteximg.com.br/arquivos/ids/159625-1000-1000/folha-de-louro-emp.png?v=637130581619630000">
         </div>
         <div class="timeHrTitle">
           <h4>Hoje às 15h10</h4>
