--- a/Pipper-Front/src/app/components/profile-post/profile-post.component.scss
+++ b/Pipper-Front/src/app/components/profile-post/profile-post.component.scss
@@ -18,6 +18,7 @@
 }
 
 .timeHrTitle {
+    width: 100%;
     display: flex;
     flex-direction: column;
     margin-left: 5%;
@@ -34,6 +35,7 @@
     background-color: grey;
     height: 0.1px;
     margin-bottom: 5%;
+    width: 100%;
 }
 
 h4 {
@@ -43,6 +45,7 @@ h4 {
 
 h2 {
     color: #FFE9E9;
+    word-break: break-all;
 }
 
 .profileButtons {
