#few CSS changes in some pages #now posts w/o photo are not weird

--- a/Pipper-Front/src/app/pages/editar-perfil/editar-perfil.page.html
+++ b/Pipper-Front/src/app/pages/editar-perfil/editar-perfil.page.html
@@ -9,7 +9,7 @@
 
 <ion-card>
   <div class="ionTitle">
-    <h2>Edite seu perfil <ion-icon name="leaf-outline" class="leaf"></ion-icon></h2>
+    <h2>Edite seu perfil</h2>
   </div>
 </ion-card>
   <ion-content>
