--- a/Pipper-Front/src/app/components/home-post/home-post.component.html
+++ b/Pipper-Front/src/app/components/home-post/home-post.component.html
@@ -20,8 +20,8 @@
       </div>
     </div>
     <div class="homePost">
-      <div class="imgAndTags"> <!--collumn-->
-          <div class="imgPost"><img src="https://emporioquatroestrelas.vteximg.com.br/arquivos/ids/159625-1000-1000/folha-de-louro-emp.png?v=637130581619630000">
+      <div class="imgAndTags"> 
+          <div class="imgPost"><img src="https://lh3.googleusercontent.com/proxy/LfMY004l0hK9VXe0zHygZ6RLZM6OtoNPDmoh0CMkSslQ6SwjvCAAA71YGth69_Ci7zzQbfRL70nC9Sf7HRZb063ZawLPLpdvwTgzeSCNDRO9g0LFutj7vq-M6tbiAnB-78TAPQgp">
         </div>
       </div>
 
@@ -31,15 +31,9 @@
           <h2>{{post.title}}</h2>
           <h3>{{post.text}}</h3>
         </div>
-
-        <div class="buttons"> <!--row-->
-          <ion-button size="small" class="button"><ion-icon name="thumbs-up-outline" ></ion-icon><!--<h6>{{post.like}}</h6>--></ion-button>
-          <ion-button size="small" class="button"><ion-icon name="chatbubble-outline"></ion-icon><!--<h6>6</h6>--></ion-button>
-          <ion-button size="small" class="button"><ion-icon name="star-outline" class="star"></ion-icon><!--<h6>{{post.rating}}</h6>--></ion-button>
-        </div>
       </div>
     </div>
-
+  
     <div class="tagsPost">
       <ion-button mode="md" class="tags"><!--ngForaqui-->
         <span style="text-transform:none!important;">
@@ -61,6 +55,13 @@
           Infantil
         </span>
       </ion-button>
+    </div>
+
+    <div class="hr"></div>
+    <div class="buttons"> <!--row-->
+      <ion-button size="small" class="button"><ion-icon name="thumbs-up-outline" ></ion-icon><h6>{{post.like}}</h6></ion-button>
+      <ion-button size="small" class="button"><ion-icon name="chatbubble-outline"></ion-icon><h6>43</h6></ion-button>
+      <ion-button size="small" class="button"><ion-icon name="star-outline" class="star"></ion-icon><h6>{{post.rating}}</h6></ion-button>
     </div>
 
   </ion-card-content>
