--- a/Pipper-Front/src/app/components/home-post/home-post.component.scss
+++ b/Pipper-Front/src/app/components/home-post/home-post.component.scss
@@ -6,11 +6,12 @@
 }
 
 .imgAndTags {
-    width: 40%;
+    width: 60%;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
     margin-top: 1%;
+    margin-left: 2%;
 }
 
 .imgAndTags img {
@@ -34,23 +35,29 @@
     overflow: hidden;
 }
 
-.imgMask img {
+.imgPost img {
     height: auto;
     object-fit: cover;
     width: 100%;
     background-size: cover;
-    
 }
 
 .tagsPost {
     display: flex;
     overflow-x: scroll;
     border-radius: 50px;
-    margin-top: 5%;
+    margin-top: 3%;
 }
 
+.hr {
+    background-color: #C4FB6D;
+    height: 0.1px;
+    margin-top: 3%;
+    margin-bottom: 2%;
+}
 .textUserAndButtons {
-    width: 55%;
+    width: 100%;
+    margin-left: 3%;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
@@ -75,22 +82,30 @@
 
 ion-button {
     --border-radius: 30px;
+    margin-left: 0px;
 }
 
 .buttons {
+    width: 100%;
     display: flex;
-    justify-content: space-around;
+    justify-content: space-between;
 }
 
 .button {
     width: 100%;
     --background: #C4FB6D;
     color: black;
+    margin-left: 2%;
 }
 
+ion-card-content {
+    padding-bottom: 2%;
+}
 div.buttons ion-button.button {
-    width: 50%;
-    height: 100%;
+    width: 100%;
+    --border-radius: 0px;
+    --background: #272727;
+    color: #C4FB6D;
 }
 
 ion-icon {
@@ -103,7 +118,7 @@ ion-icon {
 }
 
 .username {
-    font-size: 80%;
+    font-size: 90%;
 }
 
 .nameAndTime {
@@ -174,6 +189,8 @@ ion-card {
     font-family: 'Poiret One', cursive;
     --background: #404040;
     color: #FFE9E9;
+    margin-top: 0px;
+    margin-bottom: 0px;
     
 }
 
@@ -194,3 +211,4 @@ ion-card {
         margin-bottom: 5%;
     }
 }
+
