--- a/Pipper-Front/src/app/pages/editar-perfil/editar-perfil.page.scss
+++ b/Pipper-Front/src/app/pages/editar-perfil/editar-perfil.page.scss
@@ -69,6 +69,9 @@ ion-input{
     -webkit-text-stroke: 0.5px (black);
     
 }
+.botaoDois {
+    -webkit-text-stroke: 1px black;
+}
 .hr {
     background-color: #C4FB6D;
     height: 0.1px;
